Replaces sun.misc.Base64 with jd.nutils.encoding.Base64 Moved some Encoding  classes to jd.nutils.encoding fixed HTTPLIveHeaderGUI
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@7185 ebf7c1c2-ba36-0410-9fe8-c592906822b4